--- a/meli-frontend/package.json
+++ b/meli-frontend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dompurify": "^2.3.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.50.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.3.3",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
